ColorQuantization Integration test